@@ -216,6 +216,7 @@
                         <configuration>
                             <target>
                                 <ant antfile="build_antlr_parser.xml" target="generate-parser"/>
+                                <ant antfile="build_antlr_parser_xquery.xml" target="generate-lexer"/>
                                 <ant antfile="build_antlr_parser_xquery.xml" target="generate-parser"/>
                             </target>
                         </configuration>
@@ -231,6 +232,15 @@
                 <version>3.3.1</version>
                 <configuration>
                     <enableOutErrElements>${surefire.enableOutErrElements}</enableOutErrElements>
+                    <!-- arguments needed for unit tests to work with Java 17
+                    https://stackoverflow.com/questions/72724816/running-unit-tests-with-spark-3-3-0-on-java-17-fails-with-illegalaccesserror-cl -->
+                    <argLine>
+                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -322,6 +332,12 @@
 		  <artifactId>httpclient</artifactId>
 		  <version>4.5.13</version>
 		</dependency>
+        <dependency>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+            <version>1.5.1</version>
+            <scope>test</scope>
+        </dependency>
 		<!--<dependency>
 		    <groupId>edu.vanderbilt.accre</groupId>
 		    <artifactId>laurelin</artifactId>
@@ -331,11 +347,6 @@
 			<groupId>org.jgrapht</groupId>
 			<artifactId>jgrapht-core</artifactId>
 			<version>1.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.10.6</version>
 		</dependency>
 		<dependency>
 		  <groupId>com.fasterxml.jackson.dataformat</groupId>
